--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
 			<div class="row">
 				<div class="col-md-12 text-center">
 					<div class="credits">
-						<p>© Copyright Jimi's Place. <b>Design By: Oluseyi Mayotomiwa Immanuel</b>
+						<p>© Copyright JetCity. <br /> <b>Design By: Oluseyi Mayotomiwa Immanuel</b>
 						</p>
 					</div>
 				</div>
