--- a/index.html
+++ b/index.html
@@ -586,35 +586,38 @@
 		</div>
 	</section>
 	<section class="ftco-section ftco-no-pt ftco-no-pb">
-		<div class="col-lg-7 col-md-6 mt-0 mt-md-5 d-flex" id="Contact">
-			<form action="#" class="request-form ftco-animate">
+		<div class="col-lg-7 col-md-12 col-xs-12 mt-0 mt-md-5 d-flex Contact" id="Contact">
+			<form action="mailto:oluseyimayotomiwa@gmail.com" method="post" enctype="text/plain"
+				class="request-form ftco-animate">
 				<h2>Contact Us</h2>
 				<div class="form-group">
-					<label for="" class="label">Firstname</label>
-					<input type="text" class="form-control" placeholder="Firstname">
+					<label for="firstname" class="label">Firstname</label>
+					<input type="text" name="firstname" class="form-control" placeholder="Firstname">
 				</div>
 				<div class="form-group">
-					<label for="" class="label">Lastname</label>
-					<input type="text" class="form-control" placeholder="Lastname">
+					<label for="lastname" class="label">Lastname</label>
+					<input type="text" name="lastname" class="form-control" placeholder="Lastname">
 				</div>
 				<div class="d-flex">
 					<div class="form-group mr-2">
-						<label for="" class="label">Email</label>
-						<input type="email" class="form-control" id="book_pick_date" placeholder="Email">
+						<label for="email" class="label">Email</label>
+						<input type="email" name="email" class="form-control" id="book_pick_date" placeholder="Email">
 					</div>
 					<div class="form-group ml-2">
-						<label for="" class="label">Tel no</label>
-						<input type="number" class="form-control" id="book_off_date" placeholder="Telephone number">
+						<label for="tel" class="label">Tel no</label>
+						<input type="number" name="tel" class="form-control" id="book_off_date"
+							placeholder="Telephone number">
 					</div>
 				</div>
 				<div class="form-group">
-					<label for="" class="label">Message</label>
-					<input type="text" class="form-control" id="time_pick" placeholder="Your Message">
+					<label for="message" class="label">Message</label>
+					<input type="text" name="message" class="form-control" id="time_pick" placeholder="Your Message">
 				</div>
 				<div class="form-group">
 					<input type="submit" value="submit" class="btn btn-primary py-3 px-4">
 				</div>
 			</form>
+
 		</div>
 	</section>
 	<br>
@@ -664,7 +667,7 @@
 							<ul>
 								<li><span class="icon icon-map-marker"></span><span class="text">203 Dominic St.
 										Mountain
-										View, Johannesburg, SA. </span></li>
+										View, Sokoto, NG. </span></li>
 								<li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929
 											210</span></a></li>
 								<li><a href="#"><span class="icon icon-envelope"></span><span
@@ -677,7 +680,7 @@
 			<div class="row">
 				<div class="col-md-12 text-center">
 					<div class="credits">
-						<p>© Copyright Jimi's Place. <b>Design By: Oluseyi Mayotomiwa Immanuel</b>
+						<p>© Copyright JetCity. <br /> Design By:<b><i>Oluseyi Mayotomiwa Immanuel</i></b>
 						</p>
 					</div>
 				</div>
