--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
 			<div class="row">
 				<div class="col-md-12 text-center">
 					<div class="credits">
-						<p>© Copyright JetCity. <br /> Design By:<b><i>Oluseyi Mayotomiwa Immanuel</i></b>
+						<p>© Copyright JetCity. <br /> Design By: <span class="fs-5"><i>Oluseyi Mayotomiwa Immanuel</i></span>
 						</p>
 					</div>
 				</div>
